trying (unsuccessfully) to fix font awesome on IE7

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -507,6 +507,7 @@ a.twitter-link {
   border-radius:6px;
   
   background: #fff;
+  filter:none;
   box-shadow:0 0px 5px rgba(0,0,0,0.2);
 }
 #top-nav a.nav-link {
